DAO updated. Added Class for JUnit tests

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 	   <spring-framework.version>4.2.6.RELEASE</spring-framework.version>
 	   <s3p0.version>0.9.1.2</s3p0.version>
 	   <mysql.version>5.1.6</mysql.version>
+	   <junit.version>4.12</junit.version>
 	   
   </properties>
   
@@ -68,12 +69,20 @@
          <artifactId>hibernate-core</artifactId>
          <version>${hibernate.version}</version>
      </dependency>
+     
      <!-- MySQL -->
-    <dependency>
+     <dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 		<version>${mysql.version}</version>
-	</dependency>
+	 </dependency>
+     
+     <!-- JUnit -->
+     <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>${junit.version}</version>
+	 </dependency>
      
   </dependencies>
 </project>
