--- a/src/resources/app.config
+++ b/src/resources/app.config
@@ -23,5 +23,5 @@ Actor=com.homework.entities.Actor
 # For JUnit tests
 database.test.jdbcUrl=jdbc:mysql://localhost:3306/payments_tests?createDatabaseIfNotExist=true
 hibernate.test.show_sql=true
-hibernate.test.hbm2ddl.auto=create
+hibernate.test.hbm2ddl.auto=create-drop
 hibernate.test.hbm2ddl.import_files=resources/test_init_data.sql
