--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 	   <s3p0.version>0.9.1.2</s3p0.version>
 	   <mysql.version>5.1.6</mysql.version>
 	   <junit.version>4.12</junit.version>
+	   <spring-mvc.version>4.2.5.RELEASE</spring-mvc.version>
 	   
   </properties>
   
@@ -57,7 +58,13 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring-framework.version}</version>
      </dependency>
-        
+     <!-- Spring MVC -->   
+     <dependency>
+   	 	<groupId>org.springframework</groupId>
+    	<artifactId>spring-webmvc</artifactId>
+    	<version>${spring-mvc.version}</version>
+	 </dependency>
+
   	 <!-- Hibernate -->
      <dependency>
          <groupId>org.hibernate</groupId>
