--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 	   <mysql.version>5.1.6</mysql.version>
 	   <junit.version>4.12</junit.version>
 	   <spring-mvc.version>4.2.5.RELEASE</spring-mvc.version>
+	   <spring.security.version>3.2.3.RELEASE</spring.security.version>
+	   <jstl.version>1.2</jstl.version>
 	   
   </properties>
   
@@ -54,9 +56,9 @@
      </dependency>
      <!-- Spring ORM -->
      <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring-framework.version}</version>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring-framework.version}</version>
      </dependency>
      <!-- Spring MVC -->   
      <dependency>
@@ -64,7 +66,25 @@
     	<artifactId>spring-webmvc</artifactId>
     	<version>${spring-mvc.version}</version>
 	 </dependency>
-
+	<!-- Spring Security -->
+	 <dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>${spring.security.version}</version>
+	 </dependency>
+	 <dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>${spring.security.version}</version>
+	 </dependency>
+		
+	 <!-- Spring Security JSP Taglib -->
+	 <dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-taglibs</artifactId>
+		<version>${spring.security.version}</version>
+	 </dependency>
+	
   	 <!-- Hibernate -->
      <dependency>
          <groupId>org.hibernate</groupId>
@@ -90,6 +110,12 @@
 		<artifactId>junit</artifactId>
 		<version>${junit.version}</version>
 	 </dependency>
-     
+
+		<!-- jstl for jsp page -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
   </dependencies>
 </project>
