--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 			xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-			xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-	<display-name>Payments System</display-name>
-	<welcome-file-list>
-        <welcome-file>HelloWorld.jsp</welcome-file>
-        <welcome-file>hello.jsp</welcome-file>
-    </welcome-file-list>
-    
-	<!-- DispatcherServlet -->
+			xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+			http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+	
+	<display-name>Payments System</display-name>    
+	
+	<!-- MVC DispatcherServlet -->
 	<servlet>
       <servlet-name>DispatcherServlet</servlet-name>
       <servlet-class>
@@ -26,12 +24,32 @@
       <servlet-name>DispatcherServlet</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
+   
+   
    	
-   	<!-- Loads Spring Security config file -->
+   	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+
+
+  <!-- Loads Spring Security config file -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/spring-security.xml
+			/WEB-INF/spring-servlet.xml
 		</param-value>
 	</context-param>
+	
+	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
