--- a/WebContent/WEB-INF/app.config
+++ b/WebContent/WEB-INF/app.config
@@ -1,6 +1,6 @@
 # Database configs
 database.driverClass=com.mysql.jdbc.Driver
-database.jdbcUrl=jdbc:mysql://localhost:3306/payments
+database.jdbcUrl=jdbc:mysql://localhost:3306/payments?characterEncoding=UTF-8
 database.user=root
 database.password=0000
 
