--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,18 @@
 	   <spring-mvc.version>4.2.5.RELEASE</spring-mvc.version>
 	   <spring.security.version>3.2.3.RELEASE</spring.security.version>
 	   <jstl.version>1.2</jstl.version>
-	   
+	   <log4j.version>1.2.17</log4j.version>
+	    
   </properties>
   
   <dependencies>
+    
+      <!-- Log4j -->
+      <dependency>
+    	<groupId>log4j</groupId>
+    	<artifactId>log4j</artifactId>
+    	<version>${log4j.version}</version>
+	  </dependency>
     
       <!-- S3PO -->
 	  <dependency>
@@ -111,11 +119,11 @@
 		<version>${junit.version}</version>
 	 </dependency>
 
-		<!-- jstl for jsp page -->
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>${jstl.version}</version>
-		</dependency>
+	 <!-- jstl for jsp page -->
+	 <dependency>
+		<groupId>jstl</groupId>
+		<artifactId>jstl</artifactId>
+		<version>${jstl.version}</version>
+	 </dependency>
   </dependencies>
 </project>
