--- a/src/test/app.config
+++ b/src/test/app.config
@@ -19,6 +19,7 @@ hibernate.show_sql=false
 Bill=com.homework.entities.Bill
 Card=com.homework.entities.Card
 Actor=com.homework.entities.Actor
+ActorRole=com.homework.entities.ActorRole
 
 # For JUnit tests
 database.test.jdbcUrl=jdbc:mysql://localhost:3306/payments_tests?createDatabaseIfNotExist=true
