--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,23 @@
 	   <spring.security.version>3.2.3.RELEASE</spring.security.version>
 	   <jstl.version>1.2</jstl.version>
 	   <log4j.version>1.2.17</log4j.version>
-	    
+	   <jsp-api.version>2.2</jsp-api.version>
+	   <servlet-api.version>2.5</servlet-api.version>
   </properties>
   
-  <dependencies>
+	  <dependencies>
+	    <dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>jsp-api</artifactId>
+	    <version>${jsp-api.version}</version>
+	  </dependency>
     
+	  <dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>${servlet-api.version}</version>
+	  </dependency>
+
       <!-- Log4j -->
       <dependency>
     	<groupId>log4j</groupId>
